--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ map.on('load', function() {
 
             // Get fill-extrusion-height from the source 'height' property.
             'fill-extrusion-height': {
-                'property': 'y12e_tot',
+                'property': '12',
                 "stops":[
                     [0.2,0],
                     [1,50000]
