--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Extrude polygons for 3D mapping.</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.js'></script>
-    <script src='./data.js'></script>
+    <script src='./data1.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
     <style>
         body { margin:0; padding:0; }
@@ -51,7 +51,7 @@ map.on('load', function() {
 
             // Get fill-extrusion-height from the source 'height' property.
             'fill-extrusion-height': {
-                'property': '12',
+                'property': 'dngts_tot',
                 "stops":[
                     [0.2,0],
                     [1,50000]
