--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div id='map'></div>
 <script>
-mapboxgl.accessToken = '<your access token here>';
+mapboxgl.accessToken = 'pk.eyJ1IjoibWluZ3ppeWUiLCJhIjoiY2psaHU1dm4wMDV6eDNwbnZvZDRpbXJwdCJ9.kkHNex4YDMict9Ylcj6zxA';
 var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/streets-v9',
