--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@ map.on('load', function() {
                     'property': 'p_tot',
                     "stops":[
                     	[0, 'white'],
-                    	[50, 'orange']
+                    	[50, 'orange'],
+                        [100,'red'],
+                        [150,'purple']
                     ]
                     
                 },
