--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
     <style>
         body { margin:2; padding:0; }
-        #map { position:absolute; top:120; bottom:120; width:50%; }
+        #map { position:absolute; top:100px; left:20px; bottom:50px; width:50%; }
     </style>
 </head>
 <body>
