--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
     <style>
         body { margin:2; padding:0; }
-        #map1 { position:absolute; top:70px; left:100px; bottom:80px; width:85%; }
-        #map2 { position:absolute; top:500px; left:100px; bottom: 10px; width:40%; }
+        #map1 { position:absolute; top:70px; left:100px; bottom:80px; width:85%; 
     </style>
 </head>
 <body>
