--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
     <style>
         body { margin:2; padding:0; }
-        #map1 { position:absolute; top:70px; left:100px; bottom:80px; width:85%; 
+        #map { position:absolute; top:70px; left:100px; bottom:80px; width:85%; 
     </style>
 </head>
 <body>
@@ -18,7 +18,7 @@
 <div id='map1'></div>
 <script>
 mapboxgl.accessToken = 'pk.eyJ1IjoibWFkZWxlaW5lam9oYW5zb24iLCJhIjoiY2lzczduYzJ4MDZrODJucGh0Mm1xbmVxNCJ9.i7q4iT8FFgh_y5v4we5UhQ';
-var map1 = new mapboxgl.Map({
+var map = new mapboxgl.Map({
     container: 'map1', // container id
     style: 'mapbox://styles/mapbox/light-v9', // stylesheet location
     center: [151.004105, -33.813002], // starting position [lng, lat]
