--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title> map analysis </title>
+    <title>map analysis</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.js'></script>
     <script src='./data.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
     <style>
         body { margin:2; padding:0; }
-        #map { position:absolute; top:70px; left:100px; bottom:80px; width:85%; 
+        #map { position:absolute; top:70px; left:100px; bottom:80px; width:85%;}
     </style>
 </head>
 <body>
@@ -56,7 +56,7 @@ map.on('load', function() {
                     	[10, 5000],
                         [30, 15000],
                         [51, 25500],
-                        [100,50000],      
+                        [100,50000]
                     ]
                 },
                  'fill-extrusion-opacity': 0.9
@@ -64,7 +64,6 @@ map.on('load', function() {
     });
 });
 </script>
-
 
 </body>
 </html>
