--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ map.on('load', function() {
     });
 });
 </script>
+    
+    <img src="https://stepupandlive.files.wordpress.com/2014/09/3d-animated-frog-image.jpg" alt="Italian Trulli">
 
 </body>
 </html>
