--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.48.0/mapbox-gl.css' rel='stylesheet' />
     <style>
         body { margin:2; padding:0; }
-        #map { position:absolute; top:70px; left:100px; width:85%;}
+        #map { position:absolute; top:70px; left:100px; bottom:120px; width:70%; }
     </style>
 </head>
 <body>
