--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@ map.on('load', function() {
                 'fill-extrusion-color' : {
                     'property': 'p_tot',
                     "stops":[
-                    	[0, 'lightcyan'],
-                    	[112, 'turquoise'],
-                        [250,'lightseagreen'],
-                        [338,'teal'],
-                        [436,'steelblue'],
-                        [635,'royalblue'],
-                        [1160,'mediumblue'],
-                        [2428,'darkblue'],
-                        [10000,'midnightblue']
+                    	[0, '#dee6ff‘],
+                    	[112, '#9dc0d5'],
+                        [250,'#6b93b6'],
+                        [338,'#577aa9'],
+                        [436,'#405fa9'],
+                        [635,'#384d7b'],
+                        [1160,'#293773'],
+                        [2428,'#1a2d5d'],
+                        [10000,'#0a1651']
                     ]
                     
                 },
