--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@ map.on('load', function() {
                 'fill-extrusion-color' : {
                     'property': 'p_tot',
                     "stops":[
-                    	[0, #dee6ff],
-                    	[112, #9dc0d5],
-                        [250, #6b93b6],
-                        [338, #577aa9],
-                        [436, #405fa9],
-                        [635, #384d7b],
-                        [1160, #293773],
-                        [2428, #1a2d5d],
-                        [10000, #0a1651]
+                    	[0, #d3e7ea],
+                    	[112, #b9dfe5],
+                        [250, #abccec],
+                        [338, #9eb9ec],
+                        [436, #8098d9],
+                        [635, #6389b1],
+                        [1160, #4f79b1],
+                        [2428, #3f5e9a],
+                        [10000, #23437c]
                     ]
                     
                 },
