--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@ map.on('load', function() {
                 'fill-extrusion-color' : {
                     'property': 'p_tot',
                     "stops":[
-                    	[0, #d3e7ea],
-                    	[112, #b9dfe5],
-                        [250, #abccec],
-                        [338, #9eb9ec],
-                        [436, #8098d9],
-                        [635, #6389b1],
-                        [1160, #4f79b1],
-                        [2428, #3f5e9a],
-                        [10000, #23437c]
+                    	[0, #B2DEE6],
+                    	[112, #9DC6CE],
+                        [250, #88B5BF],
+                        [338, #62929B],
+                        [436, #3F7484],
+                        [635, #2B687A],
+                        [1160, #155A6F],
+                        [2428, #044D64],
+                        [10000, #003A4B]
                     ]
                     
                 },
