--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@ map.on('load', function() {
                 'fill-extrusion-color' : {
                     'property': 'p_tot',
                     "stops":[
-                    	[0, #B2DEE6],
-                    	[112, #9DC6CE],
-                        [250, #88B5BF],
-                        [338, #62929B],
-                        [436, #3F7484],
-                        [635, #2B687A],
-                        [1160, #155A6F],
-                        [2428, #044D64],
-                        [10000, #003A4B]
+                    	[0, '#B2DEE6'],
+                    	[112, '#9DC6CE'],
+                        [250, '#88B5BF'],
+                        [338,'#62929B'],
+                        [436, '#3F7484'],
+                        [635, '#2B687A'],
+                        [1160, '#155A6F'],
+                        [2428, '#044D64'],
+                        [10000, '#003A4B']
                     ]
                     
                 },
